# mcp-server-nu

./: CLAUDE.md  Cargo.toml  README.md
changes/: v0.3.0.md
scripts/: check.sh
src/: handler.rs  main.rs  tools.rs
tests/: integration_test.rs
tests/fixtures/nushell/: config.nu  env.nu
