[package]
name = "mcp-server-nu"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rust-mcp-sdk = { version = "0.3.3", default-features = false, features = [
    "server",
    "macros",
    "hyper-server",
    "ssl",
] }
rust-mcp-schema = { version = "0.5.1" }

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }