[package]
name = "mcp-server-nu"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Model Context Protocol (MCP) server for executing Nushell scripts"
homepage = "https://github.com/cablehead/mcp-server-nu"
repository = "https://github.com/cablehead/mcp-server-nu"
categories = ["command-line-utilities", "development-tools"]
keywords = ["mcp", "nushell", "server", "shell", "scripting"]

[dependencies]
rust-mcp-sdk = { version = "0.5.0", default-features = false, features = [
    "server",
    "macros",
    "hyper-server",
    "ssl",
    "2025_06_18",
] }
rust-mcp-schema = { version = "0.7.1" }

tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
