[package]
name = "mcp-server-nu"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Model Context Protocol (MCP) server for executing Nushell scripts"
homepage = "https://github.com/cablehead/mcp-server-nu"
repository = "https://github.com/cablehead/mcp-server-nu"
categories = ["command-line-utilities", "development-tools"]
keywords = ["mcp", "nushell", "server", "shell", "scripting"]

[dependencies]
rmcp = { version = "0.3.1", features = ["transport-io"] }
anyhow = "1.0"

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"